--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,4 +1,8 @@
 {
+    "admin.unknown_command": "[Parachute] Unknown command.",
+    "admin.reload:": "[Parachute] Reloaded Configuration.",
+    "admin.disable": "[Parachute] Disabled Parachute.",
+    "admin.enable": "[Parachute] Enabled Parachute.",
     "parachute.loaded": "[Parachute] plugin loaded!",
     "parachute.unloaded": "[Parachute] plugin unloaded!",
     "parachute.disabled": "[Parachute] plugin disabled!",
