--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -1,6 +1,6 @@
 {
     "admin.unknown_command": "[Fallschirm] Unbekannter Befehl.",
-    "admin.reload:": "[Fallschirm] Konfiguration neu geladen.",
+    "admin.reload": "[Fallschirm] Konfiguration neu geladen.",
     "admin.disable": "[Fallschirm] Fallschirm deaktiviert.",
     "admin.enable": "[Fallschirm] Fallschirm aktiviert.",
     "parachute.loaded": "[Fallschirm] Plugin geladen!",
